# dispatchio

./: pyproject.toml
dispatchio/: __init__.py  main.py
tests/: test_dispatchio.py
