[tool.poetry]
name = "dispatchio"
version = "0.1.11"
description = ""
authors = ["Rens van Dijk <rensvandijk2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
